# AdventOfCode_2024

./: Cargo.toml  LICENSE  New-Day.ps1  README.md
src/: lib.rs
src/aoclib/: mod.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: input.txt  mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs
src/day17/: mod.rs
src/day18/: mod.rs
src/day19/: mod.rs
src/day20/: mod.rs
src/day21/: mod.rs
src/day22/: mod.rs
src/day23/: mod.rs
src/day24/: mod.rs
src/day25/: mod.rs
src/dayXX/: mod.rs
